--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -130,7 +130,7 @@ a{
      position: absolute;
      top: 120px;
      left: 0;
-     background-color: var(--text-color-para1);
+     background-color: var(--back-color-red1);
      border-radius: 0 5px 5px 0;
      color: var(--white-text);
      font-size: 0.9rem;
