--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -842,13 +842,20 @@ a{
      min-width: 100px;
 }
 
+.home-best-sellers .best-seller-para{
+     font-size: 0.75rem;
+     width: 92.5%;
+     font-weight: 600;
+     color: var(--text-color-para1);
+}
+
 .home-best-sellers .sellers-container{
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: flex-start;
      width: 95%;
-     padding: 5px 5px;
+     padding: 5px 2.5px;
      overflow-x: scroll;
      background-color: var(--back-color-gold1);
 }
