--- a/src/styles/MobileView.css
+++ b/src/styles/MobileView.css
@@ -41,6 +41,9 @@
           width: 95%;
           padding:10px 10px 20px;
      }
+     .home .hello-section .col h1{
+          font-size: 1.8rem;
+     }
      /* .home-get-started-sec .row-title h3{
           font-size: 1.2rem;
      } */
