--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -107,7 +107,7 @@
      .home-boosted-ads{
           width: 95%;
      }
-     .home-get-started-sec, .get-started-sec{
+     .home-get-started-sec, .get-started-sec, .home-ad-websites{
           width: 95%;
      }
 
