--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -344,6 +344,39 @@ a{
      border-radius: 10px;
 }
 
+.search-page-options{
+     width: 90%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     overflow-x: scroll;
+     flex-wrap: nowrap;
+}
+
+.search-page-options span{
+     padding: 2px 5px;
+     margin: 0 5px;
+     font-size: 0.9rem;
+     font-weight: 600;
+     color: var(--text-color-para1);
+     cursor: pointer;
+     border-radius: 20px;
+     transition: all 0.4s;
+}
+
+.search-page-options span:hover{
+     background-color: var(--text-color-para2);
+     color: var(--white-text);
+     padding: 2px 10px;
+}
+
+
+.search-page-options span.active{
+     background-color: var(--back-color-blue1);
+     color: var(--white-text);
+     padding: 2px 15px;
+}
+
 .quotation-page-header{
      width: 80%;
      display: flex;
