--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -382,6 +382,7 @@ a{
      border-radius: 5px;
      margin: 5px 10px;
      box-shadow: 1px 1px 2px var(--text-color-para2);
+     cursor: pointer;
 }
 
 .quotation-page-header{
